fix visibility bug

--- a/src/app/components/auth/login/login.component.css
+++ b/src/app/components/auth/login/login.component.css
@@ -182,6 +182,10 @@
   left: -60%;
   transition: 1.25s;
 }
+.google{
+  border: transparent;
+}
+
 .switch__circle--t {
   top: -30%;
   left: 60%;
@@ -249,3 +253,5 @@
     width: 500px;
   }
 }
+
+
